--- a/css/极客1.css
+++ b/css/极客1.css
@@ -1,3 +1,8 @@
+.loading{width: 100%;height: 100%;position: fixed;top: 0;left: 0;background-color: white;z-index: 1000;}
+			.loading .pic{width: 84px;height: 84px;position: absolute;top: 0;right: 0;bottom: 0;left: 0;margin: auto;
+			              background-image:url(../img/25.gif);}
+
+
 /*公共样式*/
 *{margin: 0;  padding: 0;}
 body{background-color: #f4f4f4;;}
